--- a/ja/_posts/2022-07-11-VLAN.md
+++ b/ja/_posts/2022-07-11-VLAN.md
@@ -67,8 +67,7 @@ date: 2022-07-11 13:12:20 +0900
 
   * 하나의 논리적인 네트워크에 있는 VLAN & 다른 물리적인 네트워크에 있는 VLAN => 서로 관계가 없다
     * ![img_291](https://user-images.githubusercontent.com/104918800/178200268-6455c823-0bef-4cca-b043-621ee6c09d83.png)
-  * 클라우드에서 구성할 때, VXLAN을 통해 다른 VLAN을 연결시킬 수는 있다
-    * ![img_304](https://user-images.githubusercontent.com/104918800/178251037-618b1a10-f5db-426f-a8db-e89c469c95da.png) <br><br>
+  * (VXLAN을 통해 다른 VLAN을 연결시킬 수는 있다) <br><br>
 
   * 여러 개의 VLAN을 사용할 수 있다
     * 즉, 하나의 스위치 안에 여러 개의 네트워크가 동시에 존재할 수 있다!
@@ -143,3 +142,18 @@ VLAN 사용하기 <br>
      * 이를 통해 물리적으로 떨어져 있는 end-device들 까리도 정상적으로 통신이 가능하게 된다
    * 태깅(Tagging)
      * ![img_307](https://user-images.githubusercontent.com/104918800/178386032-45235bd8-5ab4-40bc-9cb3-f7ac4fffdcd7.png)
+     * 이로 인하여 만들 수 있는 **VLAN의 최대 개수는 4096개**가 된다
+
+<br>
+<hr>
+
+## VXLAN
+
+* ![img.png](img.png)
+* 터널링을 통해 VXLAN을 통해서 원격지의 vlan을 연결할 수 있다 (인터넷 상 외부로 떨어져 있는 VLAN을 연결할 수 있음)
+* VLAN의 상위 개념으로, 오버레이 네트워크를 구축할 수 있게 됨!
+* 최대 1600만개의 VXLAN 생성가능 (VLAN의 경우 4096개) <br> <br>
+* 따라서 클라우드 상에서 사용하기 아주 적합한 방식이다
+  * ![img_304](https://user-images.githubusercontent.com/104918800/178251037-618b1a10-f5db-426f-a8db-e89c469c95da.png)
+
+
