--- a/ja/_posts/2022-07-11-VLAN.md
+++ b/ja/_posts/2022-07-11-VLAN.md
@@ -126,10 +126,11 @@ VLAN 사용하기 <br>
 <hr>
 
 ## Switch의 Port
+<br>
 
 * ![img_306](https://user-images.githubusercontent.com/104918800/178251045-89d3e18c-482d-4afb-9966-7837ab22fb72.png)
 
-<br>
+<br><br>
 
 1. Access port
 2. **Trunk port**
@@ -149,7 +150,7 @@ VLAN 사용하기 <br>
 
 ## VXLAN
 
-* ![img.png](img.png)
+![img_333](https://user-images.githubusercontent.com/104918800/178625052-cf0fbc38-65e2-4278-899e-434ca8f357be.png)
 * 터널링을 통해 VXLAN을 통해서 원격지의 vlan을 연결할 수 있다 (인터넷 상 외부로 떨어져 있는 VLAN을 연결할 수 있음)
 * VLAN의 상위 개념으로, 오버레이 네트워크를 구축할 수 있게 됨!
 * 최대 1600만개의 VXLAN 생성가능 (VLAN의 경우 4096개) <br> <br>
