--- a/ja/_posts/2022-07-05-vnic.md
+++ b/ja/_posts/2022-07-05-vnic.md
@@ -4,14 +4,14 @@
 # 영문으로 같은 내용 작성 시 id 같아야 함
 lng_pair: id_kakao_network
 # 영문으로 작성하는 경우 영문제목
-title: vNIC
+title: [네트워크]vNIC
 
 # 저자 설정(생략 가능)
 #author: initializer
 
 # 카테고리와 태그 설정
 category: 카카오클라우드스쿨
-tags: [vNIC, NAT, PAT, IP, Network]
+tags: [Network, NAT]
 
 # 섬네일 이미지
 img: "https://docs.oracle.com/cd/E19120-01/open.solaris/819-6990/images/VNIC-Confij_Single.gif"
