--- a/ja/_posts/2022-07-13-mariadb1.md
+++ b/ja/_posts/2022-07-13-mariadb1.md
@@ -61,7 +61,7 @@ date: 2022-07-13 19:48:51 +0900
 <br>
 
 * view
-  * ![img.png](img.png)
+  * ![img](https://user-images.githubusercontent.com/104918800/178779132-f766a85f-8fe4-4c2d-9c7a-86941d23f4cc.png)
 
 <br>
 <hr>
