--- a/ja/_posts/2022-07-13-mariadb1.md
+++ b/ja/_posts/2022-07-13-mariadb1.md
@@ -2,7 +2,7 @@
 # 속성은 대쉬 내부에 작성하세요
 
 # 영문으로 같은 내용 작성 시 id 같아야 함
-lng_pair: id_kakao_emulation8
+lng_pair: id_kakao_mariadb1
 # 영문으로 작성하는 경우 영문제목
 title: (MariaDB)MariaDB 설치 및 환경 구성, 테스트
 
