image uploaded to github server

--- a/ja/_posts/2022-07-14-mariadb2.md
+++ b/ja/_posts/2022-07-14-mariadb2.md
@@ -50,32 +50,37 @@ date: 2022-07-14 18:48:51 +0900
 <br>
 
 * DBForge Studio를 통해 DB를 모델링 할 수 있다
-  1. 다음과 같이 생성하면 ![img_1.png](img_1.png)
-  2. 다음과 같이 다이어그램 그릴 수 있다 ![img_2.png](img_2.png)
+  1. 다음과 같이 생성하면
+     * ![img_1](https://user-images.githubusercontent.com/104918800/179023795-a5d41227-515b-4a65-8aed-6a483db075aa.png)
+  2. 다음과 같이 다이어그램 그릴 수 있다
+     * ![img_2](https://user-images.githubusercontent.com/104918800/179023798-126361be-5be5-46c2-93a6-d6c59cdb3bb8.png)
 
 <br>
 
 * 테스트해 보기
   1. 데이터베이스 생성
-     * ![img_11.png](img_11.png)
+     * ![img_11](https://user-images.githubusercontent.com/104918800/179023772-003c61be-6acb-48fd-8685-3cce49d8ea80.png)
   2. 모눈종이에 테이블 생성
-     * ![img_12.png](img_12.png)
+     * ![img_12](https://user-images.githubusercontent.com/104918800/179023775-8f759e41-f416-4947-b187-d60738f78084.png)
   3. 다음처럼 테이블 구성
-     * ![img_4.png](img_4.png)
+     * ![img_4](https://user-images.githubusercontent.com/104918800/179023803-4f31081e-df31-4b2f-b6e8-9555c404eebf.png)
   4. 제약 조건 확인가능
-     * ![img_5.png](img_5.png)
+     * ![img_5](https://user-images.githubusercontent.com/104918800/179023806-bc29d5bf-588f-4bc3-8178-45c04b40f79b.png)
   5. 테이블 두 개를 다음과 같이 구성
-     * ![img_6.png](img_6.png)
+     * ![img_6](https://user-images.githubusercontent.com/104918800/179023756-2bea3809-2afa-40bb-8623-d5702f1ac49e.png)
   6. 외래키 지정, 테이블 간의 관계가 설정됨
-     * ![img_7.png](img_7.png)
+     * ![img_7](https://user-images.githubusercontent.com/104918800/179023762-3e4d841c-9dca-43ba-8fa1-6c4077de22ba.png)
 
 <br>
 
 * heidi에서 행 삽입해보자
   * (buytable은 usertable에 값이 있어야 작성 가능)
-  * usertbl 행 삽입 ![img_8.png](img_8.png)
-  * buytbl 행 삽입  ![img_9.png](img_9.png)
-  * 리눅스에서 결과 확인 ![img_10.png](img_10.png)
+  * usertbl 행 삽입
+    * ![img_8](https://user-images.githubusercontent.com/104918800/179023764-39abc339-7935-4f01-a491-ec5ccd0d5e09.png)
+  * buytbl 행 삽입
+    * ![img_9](https://user-images.githubusercontent.com/104918800/179023766-464a428f-6b6e-4792-8740-e8212830ed47.png)
+  * 리눅스에서 결과 확인
+    * ![img_10](https://user-images.githubusercontent.com/104918800/179023768-ed0903fb-7591-4914-b71c-3660d4905c23.png)
 
 <br>
 <hr>
@@ -87,7 +92,7 @@ date: 2022-07-14 18:48:51 +0900
 
 <br>
 
-* ![img_18.png](img_18.png)
+* ![img_18](https://user-images.githubusercontent.com/104918800/179023789-3848efcd-6a00-4af2-a275-5d6af85f9acc.png)
 
 <br>
 
@@ -118,7 +123,7 @@ date: 2022-07-14 18:48:51 +0900
 <br>
 
 * 다이어그램 그림
-  * ![img_19.png](img_19.png)
+  * ![img_19](https://user-images.githubusercontent.com/104918800/179023791-bf51744c-445f-4c70-a66a-982277ec875c.png)
 
 <br>
 <hr>
@@ -126,13 +131,13 @@ date: 2022-07-14 18:48:51 +0900
 
 ## DBForge Studio를 사용하여 실습(다이어그램)
 1. instance
-   * ![img_13.png](img_13.png)
+   * ![img_13](https://user-images.githubusercontent.com/104918800/179023776-40028df1-c231-47cf-815c-ea63de3a7679.png)
 2. user
-   * ![img_14.png](img_14.png)
+   * ![img_14](https://user-images.githubusercontent.com/104918800/179023779-e150479a-dc58-484b-bfcc-e5e1a24328da.png)
 3. host
-   * ![img_15.png](img_15.png)
+   * ![img_15](https://user-images.githubusercontent.com/104918800/179023781-07a379c2-6444-4e04-a1d3-49d21e5f071d.png)
 4. 제약 조건 설정
-   * ![img_16.png](img_16.png)
+   * ![img_16](https://user-images.githubusercontent.com/104918800/179023784-dfb9f13f-94ab-4f9e-b698-366d77af75f5.png)
 
 <br>
 <hr>
@@ -196,4 +201,4 @@ INSERT INTO buyTbl VALUES(NULL, 'BBK', N'운동화', NULL   , 30,   2);
 SELECT * FROM userTbl;
 ```
 
-* ![img_17.png](img_17.png)
+* ![img_17](https://user-images.githubusercontent.com/104918800/179023787-9bbc09ed-82b2-4861-94bf-0b28e18e2e31.png)
