--- a/ja/_posts/2022-07-13-mariadb1.md
+++ b/ja/_posts/2022-07-13-mariadb1.md
@@ -43,30 +43,6 @@ date: 2022-07-13 19:48:51 +0900
 
 # MariaDB (1)
 
-
-## 관련 개념
-
-* RDBMS는 데이터의 무결성을 보장받기 위해 제약조건을 사용한다
-  * 많은 쿼리 발생 시 느린 건 어쩔 수 없다
-  * 따라서 **튜닝**이 아주 중요함(적은 리소스로 빠르게)
-
-<br>
-
-* Index
-  * 처리 속도를 향상시킬 수 있는 튜닝 기법 중 하나
-  * 특정 열에 대해 Index를 부여하면, 이를 통해 관련된 데이터를 빠르게 찾을 수 있다 (적은 수고로 빠르게 쿼리 가능)
-  * ex) 책 뒷장에 특정 단어에 대한 페이지가 표시되는 것과 원리가 비슷함
-  * 잘못 사용할 경우 독이 될 수 있다
-
-<br>
-
-* view
-  * ![img](https://user-images.githubusercontent.com/104918800/178779132-f766a85f-8fe4-4c2d-9c7a-86941d23f4cc.png)
-
-<br>
-<hr>
-
-
 ## CentOS8에 MariaDB 설치, 초기셋팅
 
 * Block Storage: EBS
@@ -293,11 +269,66 @@ mysql testdb -u root -p1234 -e 'SELECT * FROM usertbl'
 <hr>
 
 
-## view
+## 데이터 추가해 두기
+* 사전에 만들어 둔 DB 복붙
 
 ```sql
-CREATE VIEW v_usertbl
-AS
-SELECT username AS '이름', email AS '이메일'
-FROM usertbl
+[샘플 DB]
+http://dw.hanbit.co.kr/mariadb/10.3/employees.zip
+
+
+[실습용 DB]
+DROP DATABASE IF EXISTS sqlDB;
+CREATE DATABASE sqlDB;
+
+USE sqlDB;
+CREATE TABLE userTbl
+( userID  	CHAR(8) NOT NULL PRIMARY KEY,
+  name    	VARCHAR(10) NOT NULL,
+  birthYear   INT NOT NULL,
+  addr	  CHAR(2) NOT NULL,
+  mobile1	 CHAR(3),
+  mobile2	 CHAR(8),
+  height    SMALLINT,
+  mDate    DATE
+);
+CREATE TABLE buyTbl
+(  num INT AUTO_INCREMENT NOT NULL PRIMARY KEY,
+   userID  	CHAR(8) NOT NULL,
+   prodName 	CHAR(6) NOT NULL,
+   groupName 	CHAR(4),
+   price     	INT  NOT NULL,
+   amount    	SMALLINT  NOT NULL,
+   FOREIGN KEY (userID) REFERENCES userTbl(userID)
+);
+
+INSERT INTO userTbl VALUES('LSG', N'이승기', 1987, N'서울', '011', '11111111', 182, '2008-8-8');
+INSERT INTO userTbl VALUES('KBS', N'김범수', 1979, N'경남', '011', '22222222', 173, '2012-4-4');
+INSERT INTO userTbl VALUES('KKH', N'김경호', 1971, N'전남', '019', '33333333', 177, '2007-7-7');
+INSERT INTO userTbl VALUES('JYP', N'조용필', 1950, N'경기', '011', '44444444', 166, '2009-4-4');
+INSERT INTO userTbl VALUES('SSK', N'성시경', 1979, N'서울', NULL  , NULL      , 186, '2013-12-12');
+INSERT INTO userTbl VALUES('LJB', N'임재범', 1963, N'서울', '016', '66666666', 182, '2009-9-9');
+INSERT INTO userTbl VALUES('YJS', N'윤종신', 1969, N'경남', NULL  , NULL      , 170, '2005-5-5');
+INSERT INTO userTbl VALUES('EJW', N'은지원', 1972, N'경북', '011', '88888888', 174, '2014-3-3');
+INSERT INTO userTbl VALUES('JKW', N'조관우', 1965, N'경기', '018', '99999999', 172, '2010-10-10');
+INSERT INTO userTbl VALUES('BBK', N'바비킴', 1973, N'서울', '010', '00000000', 176, '2013-5-5');
+INSERT INTO buyTbl VALUES(NULL, 'KBS', N'운동화', NULL   , 30,   2);
+INSERT INTO buyTbl VALUES(NULL, 'KBS', N'노트북', N'전자', 1000, 1);
+INSERT INTO buyTbl VALUES(NULL, 'JYP', N'모니터', N'전자', 200,  1);
+INSERT INTO buyTbl VALUES(NULL, 'BBK', N'모니터', N'전자', 200,  5);
+INSERT INTO buyTbl VALUES(NULL, 'KBS', N'청바지', N'의류', 50,   3);
+INSERT INTO buyTbl VALUES(NULL, 'BBK', N'메모리', N'전자', 80,  10);
+INSERT INTO buyTbl VALUES(NULL, 'SSK', N'책'    , N'서적', 15,   5);
+INSERT INTO buyTbl VALUES(NULL, 'EJW', N'책'    , N'서적', 15,   2);
+INSERT INTO buyTbl VALUES(NULL, 'EJW', N'청바지', N'의류', 50,   1);
+INSERT INTO buyTbl VALUES(NULL, 'BBK', N'운동화', NULL   , 30,   2);
+INSERT INTO buyTbl VALUES(NULL, 'EJW', N'책'    , N'서적', 15,   1);
+INSERT INTO buyTbl VALUES(NULL, 'BBK', N'운동화', NULL   , 30,   2);
+
+SELECT * FROM userTbl;
 ```
+
+* ![img_17](https://user-images.githubusercontent.com/104918800/179023787-9bbc09ed-82b2-4861-94bf-0b28e18e2e31.png)
+
+
+
