--- a/ja/_posts/2022-07-14-mariadb3.md
+++ b/ja/_posts/2022-07-14-mariadb3.md
@@ -49,7 +49,7 @@ date: 2022-07-14 19:48:51 +0900
 
 * SELECT
   * 대충 이런 순서
-  * SELECT ____ FROM ____ WHERE ____ GROUP BY ____ HAVING ____ ORDER BY ____;
+  * SELECT [컬럼명] FROM [테이블명] WHERE [조건] GROUP BY [그룹으로묶기] HAVING [조건부여] ORDER BY [DESC, ASC];
 
 ```sql
 # SELECT * FROM userTbl WHERE addr='경남');
@@ -73,6 +73,7 @@ SELECT * FROM userTbl WHERE NAME LIKE '_범%';
 * 김범수보다 키가 큰 사람들의 목록을 출력하라
   1. 김범수의 키를 구한다
   2. 조건에 김범수의 키를 두고 이를 비교하여 큰 사람을 출력한다
+* ANY, ALL 조건과 같이 사용 가능
 
 ```sql
 SELECT name, height from userTbl
@@ -144,6 +145,8 @@ LIMIT 3 ;
 **5 . 그룹으로 묶기, 집계 함수 사용**
 
 * group by를 사용한다
+* 여러 개 표기된 것을 하나의 그룹으로 묶어서 표현
+  * (주로 sum, max, min, avg..와 같이 사용한다)
 
 ```sql
 SELECT userid, amount FROM buyTbl ORDER BY userid;
@@ -171,4 +174,101 @@ ORDER BY 인원 desc ;
 * 집계 함수를 count를 사용했다
 
 <br>
+
+**6 . 조건 부여하기**
+
+* HAVING 절
+  * 조건을 부여하는 방법으로 집계함수와 함께 사용한다
+  * Group by  뒤에 사용한다
+
+<br>
+
+**7 . 총합 또는 합계가 필요한 경우**
+
+* ROLLUP을 사용한다
+
+```sql
+SELECT groupName, SUM(price*amount)
+FROM buyTbl
+GROUP BY groupName
+WITH ROLLUP;
+```
+
+* ![img_24.png](img_24.png)
+* Null의 경우 그룹 네임에 포함되지 않은 경우임
+
+<br>
+
+
+
+<br>
 <hr>
+
+## update 명령어
+* INSERT
+  * INSERT INTO 테이블 values (값1, 값2)
+  * INSERT INTO 테이블[(열1, 열2, 열3)] values (값1, 값2, 값3)
+
+<br>
+<hr>
+
+## view 만들기
+
+```sql
+CREATE VIEW v_usertbl
+AS
+SELECT username AS '이름', email AS '이메일'
+FROM usertbl
+```
+
+<br>
+<hr>
+
+## Join
+
+* 두개 이상의 테이블을 연결하여 두 테이블에서 동시에 필요한 열 정보를 한번에 출력할 수 있도록 해주는 방법
+  - inner join (보편적인 방법)
+  - outer join
+  - cross join
+  - self join
+
+<br>
+
+* 형식은 다음과 같다
+
+```SQL
+SELECT [열 이름]
+FROM [조인할 첫 번째 테이블 이름]
+INNER JOIN [조인할 두 번쨰 테이블 이름]
+ON [조인될 조건]
+WHERE [검색조건]
+```
+
+<br>
+
+
+* 예제1
+
+```sql
+SELECT buyTbl.userID, buyTbl.prodName, userTbl.name, userTbl.addr, CONCAT(mobile1,mobile2) AS '휴대폰번호'
+FROM buyTbl
+INNER JOIN userTbl
+ON buyTbl.userID = userTbl.userID
+WHERE buyTbl.userID = 'JYP';
+```
+
+<br>
+
+* 예제2
+
+```SQL
+SELECT B.userID, B.prodName, U.name, U.addr, CONCAT(mobile1,mobile2) AS '휴대폰번호'
+FROM buyTbl B
+INNER JOIN userTbl U
+ON B.userID = U.userID
+WHERE B.userID = 'KBS';
+```
+
+<br>
+
+
