image uploaded to github server

--- a/ja/_posts/2022-07-14-mariadb3.md
+++ b/ja/_posts/2022-07-14-mariadb3.md
@@ -194,7 +194,7 @@ GROUP BY groupName
 WITH ROLLUP;
 ```
 
-* ![img_24.png](img_24.png)
+* ![img_24](https://user-images.githubusercontent.com/104918800/179400135-877cd15b-6a08-4dbe-a350-401965c95295.png)
 * Null의 경우 그룹 네임에 포함되지 않은 경우임
 
 <br>
