--- a/ja/_posts/2022-07-15-mariadb4.md
+++ b/ja/_posts/2022-07-15-mariadb4.md
@@ -195,7 +195,7 @@ rtt min/avg/max/mdev = 34.574/34.574/34.574/0.000 ms
 * systemctl enable libvirtd && systemctl start libvirtd -> 서비스 실행
 * yum -y install virt-manager -> 가상 머신 관리 도구 설치
 * 다음 애플리케이션이 생긴 것을 확인할 수 있다
-  * ![img_25.png](img_25.png)
+  * ![img_25](https://user-images.githubusercontent.com/104918800/179400136-4dd454ba-417b-400c-82d5-8a6c546571d2.png)
 
 <br>
 <hr>
@@ -244,9 +244,9 @@ rtt min/avg/max/mdev = 34.574/34.574/34.574/0.000 ms
 
 5 . 동작 상태 확인하기
 * virtual machine manager에서 동작 상태를 확인할 수 있다
-  * ![img_26.png](img_26.png)
+  * ![img_26](https://user-images.githubusercontent.com/104918800/179400137-5eb86d5b-4218-4431-889f-138a42b4cff7.png)
 * 인터넷 연결도 잘 되는 것이 보인다
-  * ![img_27.png](img_27.png)
+  * ![img_27](https://user-images.githubusercontent.com/104918800/179400138-ab643afc-93aa-4826-90cf-d7c6560024bb.png)
 
 <br>
 
@@ -413,7 +413,7 @@ WARNING  KVM acceleration not available, using 'qemu'
 
 <br>
 
-* ![img_28.png](img_28.png)
+* ![img_28](https://user-images.githubusercontent.com/104918800/179400139-00f296c2-c1c4-45bd-b5d3-623ff324efc9.png)
 
 <br>
 
