--- a/ja/_posts/2022-07-13-mariadb0.md
+++ b/ja/_posts/2022-07-13-mariadb0.md
@@ -58,7 +58,7 @@ date: 2022-07-13 09:48:51 +0900
 <br>
 
 * view
-  * ![img.png](img.png)
+  * ![img](https://user-images.githubusercontent.com/104918800/178779132-f766a85f-8fe4-4c2d-9c7a-86941d23f4cc.png)
 
 <br>
 
@@ -68,7 +68,8 @@ date: 2022-07-13 09:48:51 +0900
 
   * 무결성 개념 이해(online md5 generator)
     * 어떤 데이터를 일정한 길이로 만들 수 있는 해시
-    * ![img_20.png](img_20.png)
+    *
+![img_20](https://user-images.githubusercontent.com/104918800/179400131-a53f88a9-fe15-4b7b-a2ff-9bd2b3f620c3.png)
     * 무결성을 보장받기에는 너무 짧다
     * sha를 쓰면 더 긴 해시, 무결성을 보장받을 수 있게 됨
 
@@ -104,11 +105,11 @@ date: 2022-07-13 09:48:51 +0900
 
 * 3-Tier Application
   * Web - Was - DB로 구성된 3 티어 애플리케이션
-  * ![img_23.png](img_23.png)
+  * ![img_23](https://user-images.githubusercontent.com/104918800/179400134-723156f3-3794-422e-b807-cd5834e9e308.png)
   * 이러한 구조는 클라우드 환경에서 매우 중요하다
-  * ![img_21.png](img_21.png)
+  * ![img_21](https://user-images.githubusercontent.com/104918800/179400132-b6f4548e-0a41-4541-9eb8-ac0193cafa14.png)
   * 다음과 같이 수평 오토스케일링(스케일 인-아웃)을 적용할 수 있음
-  * ![img_22.png](img_22.png)
+  * ![img_22](https://user-images.githubusercontent.com/104918800/179400133-e8c6c25f-9eb8-4604-a4a9-e5d63ab59ce2.png)
 
 <br>
 
