--- a/ja/_posts/2022-07-15-mariadb4.md
+++ b/ja/_posts/2022-07-15-mariadb4.md
@@ -65,7 +65,7 @@ date: 2022-07-15 09:18:51 +0900
 
 ## 셸 스크립트의 변수 사용방법
 
-1 . 변수 지정 및 출력
+**1 . 변수 지정 및 출력**
 
 ```commandline
 [root@dblab ~]# a=hello
@@ -73,7 +73,7 @@ date: 2022-07-15 09:18:51 +0900
 MR.hello, welcome
 ```
 
-2 . 날짜 저장하기
+**2 . 날짜 저장하기**
 
 ```commandline
 [root@dblab ~]# date
@@ -83,7 +83,7 @@ Fri Jul 15 11:26:29 KST 2022
 Current time is Fri Jul 15 11:24:28 KST 2022
 ```
 
-3 . 날짜 일부 가져오기
+**3 . 날짜 일부 가져오기**
 
 ```commandline
 [root@dblab ~]# a=$(date +%y%m%d)
@@ -91,14 +91,14 @@ Current time is Fri Jul 15 11:24:28 KST 2022
 220715
 ```
 
-4 . 정상이면 0으로 표시됨
+**4 . 정상이면 0으로 표시됨**
 
 ```commandline
 [root@dblab ~]# echo $?
 0
 ```
 
-5 . 명령실행 결과코드에서 0을 제외한 나머지는 모두 Error임
+**5 . 명령실행 결과코드에서 0을 제외한 나머지는 모두 Error임**
 
 ```commandline
 [root@dblab ~]# ping www.google -c 1
@@ -112,7 +112,7 @@ bash: asdasd: command not found...
 127
 ```
 
-6 . 파일로 저장
+**6 . 파일로 저장**
 
 ```commandline
 [root@dblab ~]# date > result.txt
@@ -120,7 +120,7 @@ bash: asdasd: command not found...
 Fri Jul 15 11:30:54 KST 2022
 ```
 
-7 . 오류날 경우 파일에 저장되지 않는다
+**7 . 오류날 경우 파일에 저장되지 않는다**
 
 ```commandline
 [root@dblab ~]# adasd www.google.com -c 1 > result.txt
@@ -211,23 +211,23 @@ rtt min/avg/max/mdev = 34.574/34.574/34.574/0.000 ms
 
 <br>
 
-1 . 이미지 복사
+**1 . 이미지 복사**
 * cp CentOS-7-x86_64-GenericCloud-2003.qcow2 gildong.qcow2
 
 <br>
 
-2 . 패스워드 지정 및 이미지에 웹 서버를 설치
+**2 . 패스워드 지정 및 이미지에 웹 서버를 설치**
 * virt-customize -a gildong.qcow2 --root-password password:test123 --install httpd --run-command 'systemctl enable httpd' --selinux-relabel
 
 <br>
 
-3 . 이미지 한번 더 복사
+**3 . 이미지 한번 더 복사**
 * cp gildong.qcow2 chulsoo.qcow2
 * 길동은 스크립트로 값을 받아서 인스턴스를 만들어 볼 것임
 
 <br>
 
-4 . 인스턴스 만들기
+**4 . 인스턴스 만들기**
 * virt-install --name gildong --vcpus 1 --ram 1024 --disk /cloud/gildong.qcow2 --os-type linux --os-variant rhel7.0 --import --noautoconsole
 * virt-install --name gildong --vcpus 1 --ram 1024 --disk /cloud/gildong.qcow2 --os-type linux --os-variant rhel7.0 --import --noautoconsole > /dev/null
   * 인스턴스에 자원 할당해서 생성함, redhatenterprise7, null로 보내 출력 메시지 생략하기
@@ -242,7 +242,7 @@ rtt min/avg/max/mdev = 34.574/34.574/34.574/0.000 ms
 
 <br>
 
-5 . 동작 상태 확인하기
+**5 . 동작 상태 확인하기**
 * virtual machine manager에서 동작 상태를 확인할 수 있다
   * ![img_26](https://user-images.githubusercontent.com/104918800/179400137-5eb86d5b-4218-4431-889f-138a42b4cff7.png)
 * 인터넷 연결도 잘 되는 것이 보인다
@@ -250,7 +250,7 @@ rtt min/avg/max/mdev = 34.574/34.574/34.574/0.000 ms
 
 <br>
 
-6 . 인터페이스에 할당된 주소 확인하기, IP만 확인하기
+**6 . 인터페이스에 할당된 주소 확인하기, IP만 확인하기**
 
 ```commandline
 [root@dblab cloud]# virsh domifaddr gildong
@@ -276,7 +276,7 @@ rtt min/avg/max/mdev = 34.574/34.574/34.574/0.000 ms
 
 ## 스크립트를 활용해서 가상화 환경 만들기
 
-1 . 스크립트 파일 생성
+**1 . 스크립트 파일 생성**
 
 ```shell
 [root@dblab cloud]# touch instance.sh
@@ -286,7 +286,7 @@ rtt min/avg/max/mdev = 34.574/34.574/34.574/0.000 ms
 
 <br>
 
-2 . 스크립트 파일 구성: instance.sh
+**2 . 스크립트 파일 구성: instance.sh**
 
 ```shell
 #!/bin/bash
@@ -328,7 +328,7 @@ echo
 
 <br>
 
-3 . 실행해 보자
+**3 . 실행해 보자**
 
 ```commandline
 		 Instance Creation Program
@@ -355,7 +355,7 @@ WARNING  KVM acceleration not available, using 'qemu'
 
 ## 셸과 스크립트에서 SQL문 실행하기
 
-1 . 조회
+**1 . 조회**
 
 ```commandline
 [root@dblab cloud]# mysql -u root -p1234
@@ -379,7 +379,7 @@ WARNING  KVM acceleration not available, using 'qemu'
 
 <br>
 
-2 . 삽입
+**2 . 삽입**
 
 ```commandline
 [root@dblab cloud]# id=user1
@@ -398,7 +398,7 @@ WARNING  KVM acceleration not available, using 'qemu'
 
 <br>
 
-3 . 다음 시나리오를 참고하여 테이블과 제약 조건 만들기
+**3 . 다음 시나리오를 참고하여 테이블과 제약 조건 만들기**
 
 * Cloud DB 실습 시나리오
   * 물리 서버에서 확인할 수 있는 정보(hostTbl)
@@ -417,7 +417,7 @@ WARNING  KVM acceleration not available, using 'qemu'
 
 <br>
 
-4 . 스크립트 파일 구성: instance.sh
+**4 . 스크립트 파일 구성: instance.sh**
 
 ```shell
 #!/bin/bash
