--- a/ja/_posts/2022-07-15-mariadb4.md
+++ b/ja/_posts/2022-07-15-mariadb4.md
@@ -4,7 +4,7 @@
 # 영문으로 같은 내용 작성 시 id 같아야 함
 lng_pair: id_kakao_mariadb4
 # 영문으로 작성하는 경우 영문제목
-title: (MariaDB)클라우드의 DB 실습
+title: (MariaDB)DB에 클라우드 구성하기 - 인스턴스 생성 및 테이블 추가
 
 # 저자 설정(생략 가능)
 #author: initializer
