--- a/ja/_posts/2022-07-11-ACL.md
+++ b/ja/_posts/2022-07-11-ACL.md
@@ -44,7 +44,7 @@ date: 2022-07-11 17:09:10 +0900
 
 <br>
 
-* 클라우드의 서브넷팅은 다음과 같은 연결로 구성된다
+* 클라우드의 서브넷팅은 다음과 같은 연결로 구성된다 (3-Tier)
 * ![img_311](https://user-images.githubusercontent.com/104918800/178251058-72d12b62-2bc4-45e5-b2d6-385a8579cc7f.png)
   * 여기서, '보안 설정'이란 무엇일까?
 
