--- a/ja/_posts/2022-07-07-IP.md
+++ b/ja/_posts/2022-07-07-IP.md
@@ -4,7 +4,7 @@
 # 영문으로 같은 내용 작성 시 id 같아야 함
 lng_pair: id_kakao_network
 # 영문으로 작성하는 경우 영문제목
-title: (네트워크)Internet Protocol
+title: (네트워크)Internet Protocol - IP
 
 # 저자 설정(생략 가능)
 #author: initializer
@@ -82,15 +82,20 @@ date: 2022-07-07 14:03:22 +0900
 <br>
 <hr>
 
-## 서브넷 마스크
+## 서브넷 마스크와 서브넷팅
 
-* 서브넷 마스크 및 서브넷팅
-  * 서브넷 마스크
-    * ![img_264](https://user-images.githubusercontent.com/104918800/178200213-a57c55b6-d684-4a02-bb72-58ebe22715fa.png)
+* 서브넷 마스크
+  * ![img_264](https://user-images.githubusercontent.com/104918800/178200213-a57c55b6-d684-4a02-bb72-58ebe22715fa.png)
   * IP주소와 Subnet mask까지 봐야지 같은 네트워크인지 확인 할 수 있다
     * 255.255.0.0일때, 1.1.2.3과 1.1.211.30은 같은 네트워크 범위임
-  * 서브넷팅
-    * ![img_265](https://user-images.githubusercontent.com/104918800/178200214-c786e857-5fd8-4e3e-8dda-154dddfe0353.png)
+
+<br>
+
+* 서브넷팅
+  * 원래의 네트워크 범위를 필요한 만큼 동일한 크기의 작은 네트워크로 나누는 작업
+  * 장점
+    * IP 낭비를 줄일 수 있다
+    * 불필요한 브로드캐스트의 범위를 줄일 수 있다
 
 <br>
 
@@ -113,11 +118,32 @@ date: 2022-07-07 14:03:22 +0900
 
 <br>
 
+* VPC에서 이 서브넷팅을 적용 가능함
+  * ![img_265](https://user-images.githubusercontent.com/104918800/178200214-c786e857-5fd8-4e3e-8dda-154dddfe0353.png)
+  * VPC 내부 서브넷마다 IP 주소 범위를 지정해 줄 수 있다
+  * VSLM: 가변 길이 서브넷 마스크
+
+<br>
+<hr>
+
+## 원하는 개수로 네트워크를 나누기 (서브넷팅의 방법)
+* ![img_342](https://user-images.githubusercontent.com/104918800/179402399-c542e0a6-ea54-4865-8072-816e7108fd6a.png)
+* 즉, 192.168.1.0 ~ 192.168.1.255를 사용할 수 있다
+  * (단 0: 네트워크 주소, 255: 브로드캐스트 주소)
+
+<br>
+
+* 네트워크를 나누는 방법
+  * ![img_343](https://user-images.githubusercontent.com/104918800/179402397-eb7973a7-170f-4ca9-8b18-9a1570a91a87.png)
+
+<br>
+
 * 연습문제
   * ![img_263](https://user-images.githubusercontent.com/104918800/178200212-67b2ee9c-e0e6-4f85-a7df-51c3cd24d14c.png)
 
 * 참고하면 좋음
   * ![img_259](https://user-images.githubusercontent.com/104918800/178200199-ae91b871-4cd8-4843-bb88-f8d612a3b051.png)
+
 
 <br>
 <hr>
