--- a/ja/_posts/2022-07-14-mariadb2.md
+++ b/ja/_posts/2022-07-14-mariadb2.md
@@ -4,7 +4,7 @@
 # 영문으로 같은 내용 작성 시 id 같아야 함
 lng_pair: id_kakao_mariadb2
 # 영문으로 작성하는 경우 영문제목
-title: (MariaDB)기본 SQL Query문
+title: (MariaDB)데이터베이스 명령어 실습 - 기본 Query문
 
 # 저자 설정(생략 가능)
 #author: initializer
@@ -41,7 +41,7 @@ date: 2022-07-14 19:48:51 +0900
 <!-- outline-end -->
 
 
-# MariaDB (3) - 데이터베이스 기본 명령어
+# MariaDB (2) - 데이터베이스 기본 쿼리문
 
 ## SELECT 명령어
 
@@ -236,7 +236,7 @@ FROM usertbl
 
 * 형식은 다음과 같다
 
-```SQL
+```sql
 SELECT [열 이름]
 FROM [조인할 첫 번째 테이블 이름]
 INNER JOIN [조인할 두 번쨰 테이블 이름]
@@ -267,7 +267,7 @@ MariaDB [sqlDB]> SELECT buyTbl.userID, buyTbl.prodName, userTbl.name, userTbl.ad
 
 * 예제2
 
-```SQL
+```sql
 MariaDB [sqlDB]> SELECT B.userID, B.prodName, U.name, U.addr, CONCAT(mobile1,mobile2) AS '휴대폰번호'
     -> FROM buyTbl B
     -> INNER JOIN userTbl U
