blog update for 0719

--- a/ja/_posts/2022-07-19-linux2.md
+++ b/ja/_posts/2022-07-19-linux2.md
@@ -54,7 +54,7 @@ Linux websrv 3.10.0-1160.el7.x86_64 #1 SMP Mon Oct 19 16:18:59 UTC 2020 x86_64 x
 ```
 
 > Kernel?
-* ![img.png](img.png)
+* ![img](https://user-images.githubusercontent.com/104918800/180102117-607a3787-d51f-414d-a847-13aba15d4a13.png)
 * OS에서의 사용하는 모든 애플리케이션, Tool, Service 등은 Kernel의 허락을 받아야 물리자원에 접근이 가능함
 * 또한 Kernel의 허락을 받아야 해당 서비스를 실행/중지 시킬 수 있다
 
@@ -79,8 +79,8 @@ Linux websrv 3.10.0-1160.el7.x86_64 #1 SMP Mon Oct 19 16:18:59 UTC 2020 x86_64 x
 * 클라우드 환경을 위한 다양한 도구들은 독립적으로 작동해서는 큰 효과를 볼 수 없다
   * 다른 도구들(오픈소스)과 같이 연계하여 효과를 극대화할 수 있다
   * 이를 위해서는 **서로간의 호환 문제**가 해결되어야 하지만, 리눅스 상에서는 이러한 문제를 해결할 수 있다
-* UNIX 서버에서 x86 서버로 갈아타게 되는 과정 <br> ![img_2.png](img_2.png)
-* 클라우드의 등장 배경 <br> ![img_1.png](img_1.png)
+* UNIX 서버에서 x86 서버로 갈아타게 되는 과정 <br> ![img_2](https://user-images.githubusercontent.com/104918800/180102120-499917a7-82a4-4c8c-b447-2fe218178f08.png)
+* 클라우드의 등장 배경 <br> ![img_1](https://user-images.githubusercontent.com/104918800/180102119-56b8470a-1be6-4770-9dc3-08dfaab1c592.png)
 
 <br>
 
@@ -522,7 +522,7 @@ init 6
 <br>
 
 * run level 3으로 변경된 것을 확인할 수 있다
-  * ![img_4.png](img_4.png)
+  * ![img_4](https://user-images.githubusercontent.com/104918800/180102155-eb7449b7-78e1-462f-ae24-e80b510cb889.png)
   * (처음 부팅할 때 화면에 보여주는 메시지 MOTD(message of the day)로 변경 가능)
 
 ```commandline
@@ -530,7 +530,7 @@ init 6
 ```
 
 * MOTD가 수정된 모습(인사말 추가함)
-  * ![img_5.png](img_5.png)
+  * ![img_5](https://user-images.githubusercontent.com/104918800/180102113-b48b3e54-bed5-4742-bd51-2bd3950bf5b7.png)
 
 <br>
 
@@ -594,7 +594,7 @@ curl 을 이용하여 페이지의 헤더 내용을 포함하여 확인
 
 <br>
 
-![img_3.png](img_3.png)
+![img_3](https://user-images.githubusercontent.com/104918800/180102143-ed4810bf-b3aa-4727-8fd4-babc16d9bfbe.png)
 * 이와 같이 프록시 서버를 구성하면 모든 PC가 8.8.8.8에 요청을 보내지 않아도 됨
 * 효과
   * 대역폭을 여유롭게 쓸 수 있음
