blog update 0719 _ fin

--- a/ja/_posts/2022-07-19-linux2.md
+++ b/ja/_posts/2022-07-19-linux2.md
@@ -53,11 +53,6 @@ date: 2022-07-19 11:18:51 +0900
 Linux websrv 3.10.0-1160.el7.x86_64 #1 SMP Mon Oct 19 16:18:59 UTC 2020 x86_64 x86_64 x86_64 GNU/Linux
 ```
 
-> Kernel?
-* ![img](https://user-images.githubusercontent.com/104918800/180102117-607a3787-d51f-414d-a847-13aba15d4a13.png)
-* OS에서의 사용하는 모든 애플리케이션, Tool, Service 등은 Kernel의 허락을 받아야 물리자원에 접근이 가능함
-* 또한 Kernel의 허락을 받아야 해당 서비스를 실행/중지 시킬 수 있다
-
 <br>
 
 * 리눅스
@@ -74,7 +69,16 @@ Linux websrv 3.10.0-1160.el7.x86_64 #1 SMP Mon Oct 19 16:18:59 UTC 2020 x86_64 x
 
 <br>
 
-### 2. 클라우드에서의 리눅스
+### Kernel
+* ![img](https://user-images.githubusercontent.com/104918800/180102117-607a3787-d51f-414d-a847-13aba15d4a13.png)  ![img_22](https://user-images.githubusercontent.com/104918800/180261283-538d7834-a33c-4ed0-aece-080e8eaccb91.png)
+* OS에서의 사용하는 모든 애플리케이션, Tool, Service 등은 Kernel의 허락을 받아야 물리자원에 접근이 가능함
+* 또한 Kernel의 허락을 받아야 해당 서비스를 실행/중지 시킬 수 있다
+
+
+<br>
+<hr>
+
+## 2. 클라우드에서의 리눅스
 
 * 클라우드 환경을 위한 다양한 도구들은 독립적으로 작동해서는 큰 효과를 볼 수 없다
   * 다른 도구들(오픈소스)과 같이 연계하여 효과를 극대화할 수 있다
@@ -95,6 +99,11 @@ Linux websrv 3.10.0-1160.el7.x86_64 #1 SMP Mon Oct 19 16:18:59 UTC 2020 x86_64 x
 
 
 ## 3. 리눅스의 사용자 정보
+
+* 사용자는 로그인을 하게 되면 각 사용자별로 별도의 시스템 환경 변수를 할당 받는다
+* printenv 명령어를 통해 사용자 환경 변수를 확인할 수 있다
+
+<br>
 
 ```commandline
 [root@websrv ~]#
@@ -325,6 +334,24 @@ EOF로 여러줄 입력한다
 > hello
 > world
 > ZZZ
+```
+
+<br>
+
+**꺽쇄(<, <<, >, >>) 활용하는 방법이 궁금해요!** <br>
+* 입력 1> 파일명 : 정상처리 결과값만 파일에 저장
+* 입력 2> 파일명 : 오류 결과값만 파일에 저장
+
+```commandline
+[root@srv7 0720]# ping -c 1 www.google.com 1> abc.txt           오류는 출력하고 내용만 담아라
+
+[root@srv7 0720]# cat abc.txt
+PING www.google.com (172.217.26.228) 56(84) bytes of data.
+64 bytes from bom05s09-in-f4.1e100.net (172.217.26.228): icmp_seq=1 ttl=128 time=29.8 ms
+...
+
+[root@srv7 0720]# ping -c 1 www.google.com 2> abc.txt           내용은 출력하고 오류만 담아라
+(정상 내용이 출력됨)
 ```
 
 <br>
