image uploaded to github server

--- a/ja/_posts/2022-07-20-linux5.md
+++ b/ja/_posts/2022-07-20-linux5.md
@@ -44,12 +44,12 @@ date: 2022-07-20 11:18:51 +0900
 
 * NFS: 공유 스토리지
 * NFS는 운격의 **디렉터리**를 할당해 마운트해서 쓸 수 있다
-  * ![](img_29.jpg)
+  * ![img_29](https://user-images.githubusercontent.com/104918800/181050207-430049f8-c34c-4348-a338-c0d72671826c.jpg)
 
 <br>
 
 * 마운트는 무엇인가?
-  * ![](img_30.jpg)
+  * ![img_30](https://user-images.githubusercontent.com/104918800/181050215-843d0c7b-408d-4e5e-894f-ea133659ad83.jpg)
 
 <br>
 <hr>
