--- a/ja/_posts/2022-07-20-linux6.md
+++ b/ja/_posts/2022-07-20-linux6.md
@@ -183,7 +183,7 @@ testuser1:x:1011:1011::/home/testuser1:/bin/bash
 
 ##  사용자 기본 디렉터리 지정하기
 * home directory 가 아닌 다른 디렉터리를 쓰도록 해 보자
-  * ![](img_31.jpg)
+  * ![img_31](https://user-images.githubusercontent.com/104918800/181050219-6ef7efc5-9d23-447e-b43e-0318c6c5897f.jpg)
 
 <br>
 
