--- a/ja/_posts/2022-07-19-linux3.md
+++ b/ja/_posts/2022-07-19-linux3.md
@@ -430,3 +430,7 @@ Are you sure you want to continue connecting (yes/no/[fingerprint])? ^C
    * ssh -i mykey.pem [IP주소]
    * 혹은 ppk 파일을 putty와 연결하여 접속 <br><br>
 
+<br>
+
+* 실전에서는, 키 페어를 이미지에 저장하지 않는다
+* ![img_33](https://user-images.githubusercontent.com/104918800/181285787-110942c3-c380-46b3-96b0-5dc042cb6f8c.jpg)
