--- a/ja/_posts/2022-07-21-linux7.md
+++ b/ja/_posts/2022-07-21-linux7.md
@@ -58,7 +58,11 @@ date: 2022-07-21 10:18:51 +0900
 <br>
 
 * 마운트
-  * mount /dev/sr0 /test
+  * mount [from] [to]
+  * ex) mount /dev/sr0 /test
+    * CD-ROM을 /test  디렉토리에 연결한다
+  * ex) mount -t nfs 192.168.1.101:/cloud /test
+    * 원격지 서버인 192.168.1.101 의 /cloud 디렉터리를 로컬 /test 디렉터리에 연결한다
 * 마운트 해제 (둘 중 어느 곳을 써도 됨)
   * umount /test
   * umount /dev/sr0
