--- a/ja/_posts/2022-07-19-linux2.md
+++ b/ja/_posts/2022-07-19-linux2.md
@@ -210,7 +210,7 @@ drwxr-xr-x.  2 root root     6 Jul 13 14:33 Videos
 <hr>
 
 ## 5. 파일의 내용 살펴보기
-1. cat
+1. cat 명령어
    * 파일의 전체 내용 살펴보기
 2. more
    * 파일의 내용을 한 페이지/한 줄씩 살펴보기
@@ -569,17 +569,13 @@ init 6
 
 
 
-## 10. curl
+## 10. curl 명령어
 
-* Proxy 서버 접속하기
+* 프록시 서버 접속하기
 
-
-* curl
-  * 웹사이트 주소를 통하여 해당 페이지의 코드를 다운로드 하거나 api 연결, 파일 다운로드 등에 활용
-  * ex) wget https://www.rpmfind.net/linux/centos/7.9.2009/os/x86_64/Packages/gedit-3.28.1-3.el7.x86_64.rpm
-
-* L옵션 주면
-* i 옵션 주면 헤더까지
+* curl: 기반의 웹 요청 도구. http 메시지를 요청해 결과를 확인하는 명령어
+  * L옵션: 해당 페이지까지 들어가서 코드의 내용을 확인한 뒤 화면에 출력
+  * i 옵션: 헤더 내용을 포함하여 확인
 
 
 ```commandline
@@ -646,12 +642,74 @@ curl 을 이용하여 페이지의 헤더 내용을 포함하여 확인
 * pwd(print working directory)
   * 현재 작업중안 디렉터리가 어디인지 표시해 줌
 
+<br>
+
 * clear
   * 페이지 지우기
 
-* wget
+<br>
+
+* wget 명령어
+  * 웹사이트 주소를 통하여 해당 페이지의 코드를 다운로드 하거나 api 연결, 파일 다운로드 등에 활용
   * 특정 웹주소로부터 파일 등을 다운로드 하기 위한 툴
+  * ex) wget https://www.rpmfind.net/linux/centos/7.9.2009/os/x86_64/Packages/gedit-3.28.1-3.el7.x86_64.rpm
+
+<br>
+
+* netstat 명령어
+  * 네트워크 상태 정보를 출력한다
+  * netstat -anpt | grep LISTEN
+    * a: **모든** 연결 및 수신 대기 포트를 표시함
+    * n: 이름이 아닌 IP 주소로 확인하겠다
+    * p: 각 서비스가 몇번 PID를 사용하고 있는지
+    * t: TPC 서비스만 출력
+    * u: UDP 서비스만 출력
+
+<br>
+
+* grep 명령어
+  * 특정 문자열에 매치하는 행을 출력시켜 준다
+  * grep 문자열 입력파일
+  * ex1) grep Listen /etc/httpd/conf/httpd.conf
+  * ex2) cat anaconda-ks.cfg | grep root
+
+<br>
+
+* 인터페이스 비활성화 및 활성화
+  * systemctl start network (서비스 시작)
+  * systemctl enable network (부팅시 자동으로 실행)
 
 
 <br>
-<hr>
+
+* df 명령어
+  * 디스크 사용량과 마운트 정보를 확인 가능함
+
+<br>
+
+* mount 명령어
+  * mount [물리장치(from)] [논리경로(to)]
+  * mount /dev/sr0 /test
+
+
+<br>
+
+* sysstat 명령어
+  * yum -y install sysstat
+  * 시스템 자원 사용량 확인 가능
+  * 1초마다 한번씩 5번을 측정, 맨 하단에는 평균값
+
+```shell
+[root@srv7 ~]# sar 1 5
+Linux 3.10.0-1160.el7.x86_64 (srv7) 	07/22/2022 	_x86_64_(2 CPU)
+
+09:37:35 AM     CPU     %user     %nice   %system   %iowait    %steal     %idle
+09:37:36 AM     all      1.55      0.00      0.00      0.00      0.00     98.45
+09:37:37 AM     all      3.74      0.00      2.14      0.00      0.00     94.12
+09:37:38 AM     all      2.69      0.00      0.54      0.00      0.00     96.77
+09:37:39 AM     all      1.57      0.00      0.52      0.00      0.00     97.91
+09:37:40 AM     all      3.28      0.00      2.19      0.00      0.00     94.54
+Average:        all      2.55      0.00      1.06      0.00      0.00     96.39
+```
+
+
