--- a/_data/lang/ja.yml
+++ b/_data/lang/ja.yml
@@ -20,14 +20,14 @@ date:
   months: [1월, 2월, 3월, 4월, 5월, 6월, 7월, 8월, 9월, 10월, 11월, 12월]
 
 not_found:
-  header: 맙소사! 대체 뭘 누른 거죠?
+  header: 맙소사! 대체 무슨 짓을 한 거죠?
   line1: 요청하신 페이지를 못 찾았아요🙄
   line2: 메뉴 혹은 검색 기능을 사용해 보세요
 
 no_translation_tooltip: 번역 불가
 
 navigation:
-  brand_sub_text: Dream Realizer
+  brand_sub_text: 비영리 블로그입니다
   contact_header: Contact
 
 color_scheme_switch_tooltip: 야간 모드
@@ -143,7 +143,7 @@ archives:
 # for about layout
 about:
   title: 정보
-  button_name: About
+  button_name: 블로거 정보
   sub_title: "📧kss0097@gmail.com 💾https://github.com/passionleader"
   email_title: email
 
