--- a/_data/lang/ja.yml
+++ b/_data/lang/ja.yml
@@ -144,7 +144,7 @@ archives:
 about:
   title: 정보
   button_name: 블로거 정보
-  sub_title: "📧kss0097@gmail.com 💾https://github.com/passionleader"
+  sub_title: "📧sungsu1624@gmail.com 💾https://github.com/passionleader"
   email_title: email
 
 # for links layout
