--- a/_data/lang/en.yml
+++ b/_data/lang/en.yml
@@ -144,7 +144,7 @@ archives:
 about:
   title: About
   button_name: About
-  sub_title: "📧sungsu1624@gmail.com 💾https://github.com/passionleader"
+  sub_title: "📧sungsu1624@gmail.com ▶️https://www.youtube.com/@nolankim554"
   email_title: email
 
 # for links layout
